--- a/twosides.tex
+++ b/twosides.tex
@@ -6,34 +6,29 @@
 %We follow some early work in this direction, but instead of searching for fairly generic bounds on the perforrmance of such mechanisms, we seek a practical mechanism for the particular case of advice under subject freedom.
 
 
-Every day there are new patients with diseases diagnosed and treatments that need to be chosen. 
-The scenarios that motivate optimal decision elicitation are more naturally cast not as one shot interactions, but as repeated games with many experts and a sequence of subjects who seek advice before making a decision which only affect them.
+While the study of decision markets so far has focused on a single decision, the motivating application are suggestive of of a sequence of similar decisions faced by different agents.
+Every day new patients with diseases are diagnosed, and treatments need to be chosen. 
+A corporation faces new investment oportunities with regularity.
+These scenarios that motivate optimal decision elicitation are more naturally cast not as one shot interactions, but as repeated games with many experts and a sequence of subjects who seek advice before making a decision which only affect them.
 This combines the central aspects of bandits with compliance awareness (a sequence of choices and learning from past experience, where the actions of subjects are not bound to follow the algorithm choice) and elicitation of information form experts to enable optimal decisions without the advice being bounding. 
 Bounded regret algorithms with compliance awareness can be seen as addressing the special case where the experts signals are known apriori to be uninformative, and thus only the experience can be learned from.
 
-Our one-decision mechanism is the special case for $T={1}$, thus there is no role for exploration or learning from experience, since there are no future decisions  to help inform.
-When experts always report truthfully their signals, and they have no knowledge over how to aggregate them that the subject/mechanism does have,  this is eqivalent to a compliance-aware contextual bandit problem. 
+Our one-subject mechanism is the special case for $T={1}$, thus there is no role for exploration or learning from experience, since there are no future decisions  to help inform.
+When experts always report truthfully their signals and  have no knowledge over how to aggregate them that the subject/mechanism does not have,  it is eqivalent to a compliance-aware contextual bandit problem. 
 When contexts are constant across all time steps it further reduces to bandit problem with compliance awareness.
-When subject always follows the mechanism or $a$ cannot be observed it reduces to the standard multi armed bandit problem. 
+When the subject alway follows the mechanism or $a$ cannot be observed, it reduces to the standard multi armed bandit problem. 
 
  
-In contrast to the previous chapters motivation in the literature, in this chapter we switch our focus to the of constructing practical mechanisms. 
-The motivation for this switch is that the setting is natural and no mechanisms exists. 
-
-A Bayes Nash analysis, looking at the set of equilibria and comparing the worst case rewards with it to the efficient outcome, is relatively unappealing. 
-Not only does it require imposing strong assumptions on the information structures, but also it is not clear at all that markets of this complexity will be in equilibrium.
-One argument is that no-regret dynamics push to the Nash Bayes set, 
+%A Bayes Nash analysis, looking at the set of equilibria and comparing the worst case rewards with it to the efficient outcome, is unappealing. 
+%Not only does it require imposing strong assumptions on the information structures, but also it is not clear at all that markets of this complexity will be in equilibrium.
+%A compelling argument in favor of such analysis is that no-regret dynamics push to the Nash Bayes set, (cite?) 
 
 
-Theory provides a useful guide for the structure of the mechanism and it's building blocks.
-Further, we can 
-We take a compositional approach, attempting as much as possible to reuse existing algorithms and mechanisms.
-
-
-
+In contrast to the previous chapters motivation in the literature, in this chapter our focus is on the constructing a practical mechanism. 
+The motivation for this switch is that the setting is natural, and no mechanisms have been previously proposed or analized.
 We build up to the main practical design by analyzing two simplified models that illustrate the two key characteristics of our mechanism. 
-First , to create the right incentives for motivating exploratory choices, we show that the rewards from the choice of action should be linked not just to the reward on the period it is taken, but to the full stream of future rewards after it.
-Second, to aggregate signals without having the mechanism or all  experts require access to a good prior, we how offline contextual bandit algorithms and their guarantees can be used to evaluate the counterfactual value of a given experts signal.
+First , create the right incentives for motivating exploratory choices. For this, the rewards from the choice of action must be linked not just to the reward on the period it is taken, but to the full stream of future rewards after it.
+Second, to aggregate signals without having the mechanism or all  experts having access to a good common prior. For this, offline contextual bandit algorithms and their guarantees can be used to evaluate the counterfactual value of a given experts signal.
 We finish by presenting a mechanism that combines both ideas, and explore some of its limitations.
 
 %(which can be taken as strong benchmark tha the bidding mechanisms can attempt to approximate).
@@ -59,18 +54,20 @@ We finish by presenting a mechanism that combines both ideas, and explore some o
 \section{Model}
 
 The game occurs over $T$ steps, at each step : 
+
 \begin{enumerate}
 \item a new subject $t$ arrives and each $i$ of $K$ experts receives a signal $s_{t,i}$ for that subject.
-\item Each expert $i$ reports to the mechanism $\hat{s}_{t,i}$, and the mechanism selects a chosen action $c_t$
+\item Each expert $i$ reports to the mechanism $\hat{s}_{t,i}$, and after all reports are received the mechanism selects a chosen action $c_t$
 \item The subject observes $c_t$, picks an action $a_t$, and receives a reward $r_t$.
 \item The mechanism provides feedback about $s_t$, $c_t$, $a_t$, $r_t$ to experts.
 \end{enumerate}
-After the final step, the mechanism makes payments $\pi_i$ to each expert.
-
-
-It is worth noting having the signals be represented a vector is without loss of generality. For example, it can be a one hot encoding of the underlying signal). It leads to some abuse of notation, as we still denote by $s_{t,i}$ the subset of the variables encoding experts $i$ signal in period $t$. It does, however, lead to a better mapping with the contextual bandit literature, tools from which will be crucial to our results. 
-
 At the end of the final period the mechanism makes payments to the experts $pi_i( \cup \hat{s}_t,c_t,r_t,a_t \forall t \in T)$.
+
+
+It is worth noting having the signals be represented a vector is without loss of generality.
+For example, it can be a one hot encoding of the underlying signal.
+It leads to some abuse of notation, as we still denote by $s_{t,i}$ the subset of the variables encoding experts $i$ signal in period $t$. It does, however, lead to a better mapping with the contextual bandit literature, tools from which will be crucial to our results. 
+
 
 \section{A Sequence of repeated one-shot-efficient mechanisms is inefficient}
 
@@ -90,9 +87,9 @@ Running the (single subject) efficient direct action elicitation mechanism repea
 As usual with $\alpha < 1/N$ so as to preserve rational entry by the subjects by limiting the payments.
 The repeated use of single-subject-efficient mechanism thus is equivalent to a fully greedy policy: only exploitation and no exploration.
 
-\begin{lem}
-No exploration with truthful reports in the repeated single subject VCG style mechanism.
-\end{lem}
+\begin{prop}
+No exploration in the repeated single subject VCG style mechanism.
+\end{prop}
 
 This is immediate from the definition of the single subject VCG style mechanism: it selects the arm that maximizes the rewards for that period given the reports, if the reports are truthful this is the highest expected reward arm on that period. 
 
@@ -105,20 +102,13 @@ We say an optimal decision elicitation mechanism has \emph{full disclosure} if a
 3 agents, they all see signals which in expectation encode the arm with highest expectation, but they have to learn how to interpret them (which requires exploration), plus one safe arm that has higher expected reward than randomizing over the other arms (but lower than what can be obtained once you have learned to use the signals, i.e. lower than the expected rewards of the optimal policy mapping context to arms)
 \end{eg}
 
-More broadly
-
-\NDP{There are situations (like a expert has the signal needed to unlock for each period the meaning of the signals) where we do get exploration, so this needs to be softened....}
-\begin{lem}
-No Exploration with full disclosure in the repeated one shot second price bidding mechanism.
-\end{lem}
-
 
 
 On possible attempt to fix this would be by only revealing the outcome to the winning bidder, thus allowing them to internalize the informational advantage in future rounds payoffs. 
 This  internalizes the benefits of explorations, yet it prevents the other experts from learning in those rounds when they do not win, severely limiting the situations in which the mechanism can be efficient. 
 More generally, partial revelation policies, where only some of the periods are revealed (in the style of  \cite{mansour2015bayesian} ) are also inefficient in general. 
  
-\NDP{Can we characterize when this inefficiency arises? it seems very general through clearly not always; basically the experts need to learn (their signals dont point a priri the optimal action but the mapping can be learnt from experience) and the signals are spread out between different experts (if there is a single one)}
+\NDP{Can we characterize when this inefficiency arises? it seems very general through clearly not always; basically the experts need to learn (their signals dont point apriori the optimal action but the mapping can be learnt from experience) and the signals are spread out between different experts (if there is a single one then no need to learn, but we stil getthe ineficiency from wanting to to value the singals)}
 
 For many problems the sequential use of mechanisms while suboptimal is not too bad in the sense that the loss of efficiency of the mechanism can be bounded relative to the optimum (see background chapter for a brief overview of such results).
 This is not the case for sequential optimal action elicitation. Repeating any efficient one shot mechanism can lead to linearly worse performance than the optimal sequential mechanism on the same problem. In Example~\ref{eg:2regimes} the regret of the  second price bidding mechanism is $0.25(T-1)$ since the first agent wins and selects the optimal arm given his information set.
@@ -182,7 +172,7 @@ No Exploration (in equilibrium) with full disclosure in the repeated one shot se
 \end{lem}
 
 \begin{proof}
-Example~\ref{eg:2regimes} is a witness. If we have full disclosure then if agent 1 is the highest bidder they always plays the action with expected reward $0.75$. If one of the other agents wins and chooses to explore, they gain the same information as the non-winning other agent, and in the next period both have (in expectation) the same valuation, thus the second price bid is the same as the first price, and the expected payments to the agent are 0, while the payment to win over the first agent must be $\alpha 0.75$ and the expected payment $\alpha 0.5033$
+Consider Example~\ref{eg:2regimes}. If we have full disclosure then if agent 1 is the highest bidder they always plays the action with expected reward $0.75$. If one of the other agents wins and chooses to explore, they gain the same information as the non-winning other agent, and in the next period both have (in expectation) the same valuation, thus the second price bid is the same as the first price, and the expected payments to the agent are 0, while the payment to win over the first agent must be $\alpha 0.75$ and the expected payment $\alpha 0.5033$
 \end{proof}
 
 %the ideal seems to be something where we just have to learn from past not aggregate. for example if all experts get the same signals and better than the subjects prior.
@@ -246,7 +236,8 @@ We now consider a setting where the experts submit their signals, however, unlik
 
 We do this in two parts; by reducing the problem to a contextual bandit algorithm where the context is determined by the signals reported by all experts, and then using the randomization used by such algorithms to construct unbiased estimators of the gain in rewards brought about by a given agents signals, and making their reward proportional to this.
 
-\DBA{you need to insert a mini-survey of the contextual bandit literature. As I understand it, it's only recently (Langford's last few papers) that we've gotten to the point where contextual bandits are fully usable}
+%TODO: add reference to contextual banditsin bakground chapter
+%\DBA{you need to insert a mini-survey of the contextual bandit literature. As I understand it, it's only recently (Langford's last few papers) that we've gotten to the point where contextual bandits are fully usable}
 
 Assume that the subjects arrive IID. Use an unbiased contextual bandit algorithm evaluation strategy such as \cite{li2011unbiased}  Algorithm 2 and a contextual bandit algorithm (such as \cite{syrgkanis2016efficient}) to learn to use the reported signals. %http://arxiv.org/pdf/1003.5956.pdf 
 \NDP{TODO: explicitly insert the adapted version (with probability weights in our notation)}
@@ -272,10 +263,12 @@ Setting $\alpha<1/N$ ex ante bounds the total payments to the experts bellow the
 
 Note when a agent $i$ doesn't change the exploration policy (in expectation) then , $ \expec[r_t] -  E(\hat{s_{-i}},A)) =0  $.
 
-While a optimal report is not guaranteed to be strictly truthful, the bound on the bias of the offline contextual estimator bounds how much a deviation can benefit the 
-More practically, it appears very hard for a uninformed agent to obtain profits, or for a informed agent to find a strategy other than truthfulness that has higher expected reward.
+While a optimal report is not guaranteed to be strictly truthful, the bound on the bias of the offline contextual estimator bounds how much a deviation from truthfulness can benefit the expert that makes it.
+%TODO HOW?
 
-\DBA{this is very loose}.
+%More practically, it appears very hard for a uninformed agent to obtain profits, or for a informed agent to find a strategy other than truthfulness that has higher expected reward.
+
+%\DBA{this is very loose}.
 
 
 
@@ -285,11 +278,15 @@ More practically, it appears very hard for a uninformed agent to obtain profits,
 
 Note exploration implies learning how to interpret the signals, this, especially in the presence of multiple experts with conflicting priors, appears like the most practical application. I.e. not too worried about what we loose from having to randomize a little the choice, since this is needed for learning. 
 
+On the other a policy that randomizes over the set of choices faces the incentive constraints on the side 
+
 \DBA{this is very loose. Quantify tradeoffs if possible}
+On the other hand to the degree that 
+
 
 This is the generalization of contextual bandits to contextual variables (signals) provided by self-interested experts who have no inherent interest in the outcome or action, but need to be incentivized to be truthful. 
 To the degree the experts know how to interpret the (full set) learning to do it is inefficient. 
-How to incorporate this appears as a fruitful avenue for future research; that is how can a prior over the joint set of signals be elicited? 
+%How to incorporate this appears as a fruitful avenue for future research; that is how can a prior over the joint set of signals be elicited? 
 
 
 
@@ -366,11 +363,22 @@ Where $\alpha$ and $\beta$ are set ex ante.
 The condition that must be satisfied to make the payments from the mechanism smaller than the surplus it brings collectively to the subjects is $ \alpha + \beta < 1/2NT$ .
 
 
+\section{Limitations}
+
+\subsection{Information widtholding and}
 
  A major concern is that a expert would not reveal their signal truthfully and loose out on that part of the reward, if they can benefit more from being the \emph{owner} and by withholding their signal they can suppress bids of other experts, this is a particular concern since the other experts may be able to achieve higher rewards.
+In the one shot version of the game the BNE solution concept side steps these concerns, but they become more pressing in equilibrium. 
+
+Consider a situation similar tot he complementary signals example, but now there are two potential ways of aggregating a periods signals into the optimal choice. %TODO add ref
+
+Two experts, two possible aggregation functions and two independent signals
+
+
 
 A natural concern is that the experts know the estimator the mechanism is using, and can place a high bid and then make a combined set of reports and choices so the estimators realized bias is high.
 One way to try to avoid this would be to take out the rounds where the expert $i$ won the auction when calculating the signal value of $i$, note this is biased (it could be that those are when he brings a lot of value to both the signal and the aggregation of signals, and this is indeed quite natural)
+
 
 
 
